test/errhandling/psahabu/early-catchall.good
early-catchall.chpl:5: error: catchall placed before the end of a catch list
